--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
             </div>
             
             <div class="alert" style="background: #e3f2fd; border-color: #2196f3; color: #0d47a1;">
-                <strong>💰 Royalty Structure:</strong> Game Jerseys & Mural Hoodies = $10 | Mural Crewneck Sweatshirts = $7 | All Other Items = $5
+                <strong>💰 Royalty Structure:</strong> Game Jerseys = $10 | All Other Items = $5
             </div>
             
             <div class="data-section">
